修改BCGISDataStoreFactory中creatDataStore 以File.separator代替"\\"